# diffu-syn

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_core.py
examples/: demo.py
redis-data/: dump.rdb
src/diffusyn/api/: main.py
src/diffusyn/core/: __init__.py  dataset.py  diffusion.py  model.py  pipeline.py
src/diffusyn/engine/: data_loader.py  inference.py  model.py  trainer.py
src/diffusyn/interface/: api.py  config.py  storage.py  worker.py
tests/: conftest.py  stress_test.py
tests/api/: test_endpoints.py
tests/unit/core/: test_dataset.py  test_pipeline.py
tests/unit/interface/: test_storage.py
