[project]
name = "diffusyn"
version = "0.2.0"
description = "Enterprise-grade Privacy-Preserving Synthetic Data Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Raghavendra"}
]

# 1. CORE DEPENDENCIES (The "Plug" - Light & Portable)
dependencies = [
    "torch>=2.2.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "opacus>=1.4.0",
    "sdmetrics>=0.13.0",
    "tqdm>=4.66.0"
]

# 2. SERVER DEPENDENCIES (The "Play" - Heavy Infrastructure)
[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-multipart",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.0"
]
dev = [
    "pytest>=8.0",
    "httpx>=0.26.0",
    "black>=24.0",
    "ruff>=0.2.0",
    "jupyterlab>=4.0"
]